# android-minesweeper

./: .gitignore  .gitmodules  .project  README.md
app/: .project  build.gradle
app/src/androidTest/java/com/timimakkonen/minesweeper/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: .clang-tidy  CMakeLists.txt  SWIG_INSTRUCTIONS.txt
app/src/main/cpp/src/: CMakeLists.txt
app/src/main/cpp/src/android-minesweeper/: game.cpp  game.h  game_wrapper.cpp
app/src/main/cpp/swig/: game.swig
app/src/main/java/com/timimakkonen/minesweeper/: AboutFragment.java  BackgroundTaskRunner.java  CallbackTask.java  CounterWithCallbackOnZero.java  GameFragment.java  GameViewModel.java  LocalStorage.java  MainActivity.java  MaterialIntSliderAndEditText.java  MinesweeperApplication.java  MinesweeperDataForView.java  MinesweeperGridView.java  MinesweeperRepository.java  SettingsFragment.java  SolutionFragment.java  SolutionViewModel.java  VisualMinesweeperCell.java
app/src/main/java/com/timimakkonen/minesweeper/di/: ApplicationComponent.java  ApplicationModule.java  ApplicationScope.java  MinesweeperModelModule.java
app/src/main/java/com/timimakkonen/minesweeper/jni/: AndroidMinesweeperGame.java  minesweeper_game.java  minesweeper_gameJNI.java  vector_int.java
app/src/main/res/drawable/: ic_delete_black_24dp.xml  ic_eight_symbol.xml  ic_five_symbol.xml  ic_four_symbol.xml  ic_launcher_background.xml  ic_marked_symbol.xml  ic_marked_symbol_with_visibility_black_24dp.xml  ic_mine_symbol.xml  ic_one_symbol.xml  ic_save_black_24dp.xml  ic_seven_symbol.xml  ic_six_symbol.xml  ic_three_symbol.xml  ic_two_symbol.xml  ic_visibility_with_marked_symbol_black_24dp.xml
app/src/main/res/drawable-v24/: ic_launcher_foreground.xml
app/src/main/res/layout/: activity_main.xml  dialog_new_custom_grid.xml  fragment_about.xml  fragment_game.xml  material_int_slider_and_edittext.xml  solution_fragment.xml
app/src/main/res/menu/: menu_app_main.xml  menu_fragment_game.xml  menu_fragment_main.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: arrays.xml  attrs_minesweeper_grid_view.xml  attrs_slider_and_edit_text.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml
app/src/main/res/xml/: root_preferences.xml
app/src/test/java/com/timimakkonen/minesweeper/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
